Corrected ddpg function: Update state every loop
Previously the state in every loop after env acted wasnt
updated. So this is fixed now.

Tried a few more things but the agent doesnt seem to learn yet.

--- a/Continuous_Control.ipynb
+++ b/Continuous_Control.ipynb
@@ -44,9 +44,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:unityagents:\n",
+      "'Academy' started successfully!\n",
+      "Unity Academy name: Academy\n",
+      "        Number of Brains: 1\n",
+      "        Number of External Brains : 1\n",
+      "        Lesson number : 0\n",
+      "        Reset Parameters :\n",
+      "\t\tgoal_speed -> 1.0\n",
+      "\t\tgoal_size -> 5.0\n",
+      "Unity brain name: ReacherBrain\n",
+      "        Number of Visual Observations (per agent): 0\n",
+      "        Vector Observation space type: continuous\n",
+      "        Vector Observation space size (per agent): 33\n",
+      "        Number of stacked Vector Observation: 1\n",
+      "        Vector Action space type: continuous\n",
+      "        Vector Action space size (per agent): 4\n",
+      "        Vector Action descriptions: , , , \n"
+     ]
+    }
+   ],
    "source": [
     "from unityagents import UnityEnvironment\n",
     "import numpy as np\n",
@@ -55,7 +79,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# select this option to load version 1 (with a single agent) of the environment\n",
-    "env = UnityEnvironment(file_name='/Reacher_Windows_x86_64/Reacher_Windows_x86_64/Reacher.exeReacher_One_Linux_NoVis.x86_64')\n",
+    "env = UnityEnvironment(file_name='/data/Reacher_One_Linux_NoVis/Reacher_One_Linux_NoVis.x86_64')\n",
     "\n",
     "# select this option to load version 2 (with 20 agents) of the environment\n",
     "# env = UnityEnvironment(file_name='/data/Reacher_Linux_NoVis/Reacher.x86_64')"
@@ -155,15 +179,16 @@
    "source": [
     "BUFFER_SIZE = int(1e6)\n",
     "BATCH_SIZE = 32\n",
-    "ACTOR_LR = 1e-4\n",
-    "CRITIC_LR = 1e-3\n",
+    "ACTOR_LR = 1e-1\n",
+    "CRITIC_LR = 1e-1\n",
+    "WEIGHT_DECAY = 1e-2\n",
     "TAU = 1e-3\n",
     "BETA = 1\n",
     "BETA_DECAY = 0.99\n",
     "BETA_MIN = 0.01\n",
     "GAMMA = 0.99\n",
-    "UPDATE_EVERY = 1\n",
-    "TIMES_UPDATE = 5\n",
+    "UPDATE_EVERY = 4\n",
+    "TIMES_UPDATE = 4\n",
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")"
    ]
   },
@@ -175,27 +200,29 @@
    "source": [
     "class CriticNetwork(nn.Module):\n",
     "    \n",
-    "    def __init__(self, state_size, action_size):\n",
+    "    def __init__(self, state_size, action_size, seed):\n",
     "\n",
     "        super(CriticNetwork, self).__init__()\n",
-    "\n",
+    "        self.seed = torch.manual_seed(seed)\n",
     "        self.critic_layer_1 = nn.Linear(state_size, 64)\n",
-    "        self.critic_layer_2 = nn.Linear(64+action_size, 64)\n",
-    "        self.critic_out = nn.Linear(64, 1)\n",
+    "        self.critic_layer_2 = nn.Linear(64+action_size, 128)\n",
+    "        self.critic_layer_3 = nn.Linear(128, 128)\n",
+    "        self.critic_out = nn.Linear(128, 1)\n",
     "    \n",
     "    def forward(self, state, action):\n",
     "#         print(state.size(), action.size())\n",
     "        x = F.relu(self.critic_layer_1(state))\n",
-    "        x = torch.cat([x, action], dim=-1).float()\n",
+    "        x = torch.cat([x, action], dim=1)\n",
     "        x = F.relu(self.critic_layer_2(x))\n",
+    "        x = F.relu(self.critic_layer_3(x))\n",
     "        return self.critic_out(x)\n",
     "\n",
     "class ActorNetwork(nn.Module):\n",
     "\n",
-    "    def __init__(self, state_size, action_size):\n",
+    "    def __init__(self, state_size, action_size, seed):\n",
     "\n",
     "        super(ActorNetwork, self).__init__()\n",
-    "\n",
+    "        self.seed = torch.manual_seed(seed)\n",
     "        self.actor_layer_1 = nn.Linear(state_size, 64)\n",
     "        self.actor_layer_2 = nn.Linear(64, 64)\n",
     "        self.actor_out = nn.Linear(64, action_size)\n",
@@ -213,9 +240,10 @@
    "outputs": [],
    "source": [
     "class Network:\n",
-    "    def __init__(self, state_size, action_size):\n",
-    "        self.actor = ActorNetwork(state_size, action_size).to(device)\n",
-    "        self.critic = CriticNetwork(state_size, action_size).to(device)\n",
+    "    def __init__(self, state_size, action_size, seed):\n",
+    "        self.seed = seed\n",
+    "        self.actor = ActorNetwork(state_size, action_size, seed).to(device)\n",
+    "        self.critic = CriticNetwork(state_size, action_size, seed).to(device)\n",
     "\n",
     "    def copy(self, network):\n",
     "        # Actor\n",
@@ -290,19 +318,21 @@
    "source": [
     "class Agent:\n",
     "\n",
-    "    def __init__(self, state_size, action_size, action_low=-1, action_high=1):\n",
+    "    def __init__(self, state_size, action_size, random_seed, action_low=-1, action_high=1):\n",
+    "        \n",
+    "        self.seed = random.seed(random_seed)\n",
     "        \n",
     "        self.state_size = state_size\n",
     "        self.action_size = action_size\n",
     "        self.a_low = action_low\n",
     "        self.a_high = action_high\n",
-    "        self.network = Network(state_size, action_size)\n",
+    "        self.network = Network(state_size, action_size, random_seed)\n",
     "        \n",
     "        self.actor_opt = optim.Adam(self.network.actor.parameters(), lr=ACTOR_LR)\n",
-    "        self.critic_opt = optim.Adam(self.network.critic.parameters(), lr=CRITIC_LR)\n",
+    "        self.critic_opt = optim.Adam(self.network.critic.parameters(), lr=CRITIC_LR, weight_decay=WEIGHT_DECAY)\n",
     "\n",
-    "        self.target_network = Network(state_size, action_size)\n",
-    "        self.target_network.copy(self.network)\n",
+    "        self.target_network = Network(state_size, action_size, random_seed)\n",
+    "#         self.target_network.copy(self.network)\n",
     "        self.memory = ReplayBuffer()\n",
     "        self.t_step = 0\n",
     "    \n",
@@ -310,7 +340,7 @@
     "        \n",
     "        state = torch.tensor(state).float().to(device)\n",
     "        \n",
-    "        action = self.network.actor.forward(state)# + eta\n",
+    "        action = self.network.actor.forward(state) + eta\n",
     "        action = action.data.cpu().numpy()\n",
     "        action = np.clip(action, self.a_low, self.a_high)\n",
     "\n",
@@ -331,18 +361,17 @@
     "        \n",
     "        states, actions, rewards, next_states, dones = experiences\n",
     "\n",
-    "        Q_target_next = self.target_network.critic.forward(next_states, self.target_network.actor.forward(next_states).detach())\n",
+    "        Q_target_next = self.target_network.critic(next_states, self.target_network.actor(next_states))\n",
     "        Q_target = rewards + (gamma * Q_target_next * (1-dones))\n",
     "        \n",
-    "        Q_predicted = self.network.critic.forward(states, actions,)\n",
+    "        Q_predicted = self.network.critic(states, actions)\n",
     "        critic_loss = F.mse_loss(Q_predicted, Q_target)\n",
     "        \n",
     "        self.critic_opt.zero_grad()\n",
     "        critic_loss.backward()\n",
     "        self.critic_opt.step()\n",
     "\n",
-    "        Q_val = self.network.critic.forward(states, self.network.actor(states)).mean()\n",
-    "        actor_loss = -(Q_val.mean())\n",
+    "        actor_loss = -self.network.critic(states, self.network.actor(states)).mean()\n",
     "        \n",
     "        self.actor_opt.zero_grad()\n",
     "        actor_loss.backward()\n",
@@ -364,22 +393,24 @@
     "    \n",
     "    for i_ep in range(1, n_episodes+1):\n",
     "        env_info = env.reset(train_mode=True)[brain_name]\n",
-    "        state = torch.tensor(env_info.vector_observations[0]).float().to(device)\n",
+    "        state = env_info.vector_observations[0]\n",
     "        score = 0\n",
+    "        eta = np.random.uniform(-beta, beta)\n",
     "        for t in range(max_t):\n",
-    "            eta = np.random.uniform(-beta, beta)\n",
     "            action = agent.act(state, eta)\n",
     "            env_info = env.step(action.reshape(1, agent.action_size))[brain_name]\n",
-    "            next_state = torch.tensor(env_info.vector_observations[0]).float().to(device)\n",
+    "            next_state = env_info.vector_observations[0]\n",
     "            reward = env_info.rewards[0]\n",
     "            done = env_info.local_done[0]\n",
     "            agent.step(state, action, reward, next_state, done)\n",
     "            score += reward\n",
+    "            state = next_state\n",
     "            if done:\n",
     "                break\n",
+    "                \n",
     "        scores_window.append(score)\n",
     "        scores.append(score)\n",
-    "        print('\\rEpisode {}\\tAverage Score: {:.2f}, Max score: {}, Min score: {}'.format(i_ep, np.mean(scores_window), np.max(scores_window), np.min(scores_window)), end=\"\")\n",
+    "        print('\\rEpisode {} \\tAverage Score: {:.2f}, Max score: {}, Min score: {}'.format(i_ep, np.mean(scores_window), np.max(scores_window), np.min(scores_window)), end=\"\")\n",
     "        beta = max(beta_min, beta*beta_decay)\n",
     "\n",
     "        if i_ep % 100 == 0:\n",
@@ -401,7 +432,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "agent = Agent(state_size, action_size)"
+    "agent = Agent(state_size, action_size, 1)"
    ]
   },
   {
@@ -413,13 +444,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episode 100\tAverage Score: 0.01, Max score: 0.09999999776482582, Min score: 0.0\n",
-      "Episode 109\tAverage Score: 0.01, Max score: 0.09999999776482582, Min score: 0.0"
+      "Episode 100\tAverage Score: 0.999, Max score: 3.05999993160367, Min score: 0.00\n",
+      "Episode 115 \tAverage Score: 1.02, Max score: 3.05999993160367, Min score: 0.0"
      ]
     }
    ],
    "source": [
-    "scores = ddpg(agent, env, brain_name, n_episodes=500, max_t=100)\n",
+    "scores = ddpg(agent, env, brain_name, n_episodes=300, max_t=1000, beta_decay=0.8)\n",
     "\n",
     "fig = plt.figure()\n",
     "ax = fig.add_subplot(111)\n",
@@ -453,7 +484,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
